--- a/SpaClient/src/app/projects/project-detail/project-detail.component.css
+++ b/SpaClient/src/app/projects/project-detail/project-detail.component.css
@@ -43,7 +43,28 @@ h3 {
   margin-bottom: 18px
 }
 
+#filter {
+  margin-bottom: 16px;
+}
+
 #filter .col-lg-3, #filter .col-lg-2, #filter .col-lg-1 {
   padding-left: 5px;
   padding-right: 5px;
+}
+
+.max-width-150 {
+  max-width: 150px;
+}
+
+#invite .col-md-12 {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#invite button {
+  padding: 0;
+  border-radius: 50%;
+  width: 42px;
+  height: 42px;
+  text-align: center;
 }
