--- a/SpaClient/src/app/projects/project-detail/project-detail.component.html
+++ b/SpaClient/src/app/projects/project-detail/project-detail.component.html
@@ -15,7 +15,7 @@
         <button id="project-options-button" dropdownToggle type="button" class="btn" aria-controls="dropdown-animated"><fa-icon [icon]="['fas', 'cog']" size="lg"></fa-icon></button>
         <ul id="dropdown-animated" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="project-options-button">
           <li role="menuitem"><a class="dropdown-item" (click)="dragModeEnabled = !dragModeEnabled">{{dragModeEnabled ? 'Disable' : 'Enable'}} drag mode</a></li>
-          <li role="menuitem"><a class="dropdown-item" (click)="openModal(projectDeleteModal)">Delete project</a></li>
+          <li role="menuitem"><a class="dropdown-item" (click)="openModal(deleteModal)">Delete project</a></li>
         </ul>
       </div>
 
@@ -23,7 +23,7 @@
   </div>
 </div>
 <div class="row" id="filter">
-  <div class="col-lg-3">
+  <div class="col-lg-2">
     <div class="inner-addon right-addon" tabindex="1"> 
       <fa-icon [icon]="['fas', 'search']" class="icon"></fa-icon>
       <input 
@@ -35,7 +35,7 @@
         placeholder="Search" />
     </div>
   </div>
-  <div class="col-lg-2">
+  <div class="col-lg-2 max-width-150">
     <select 
       [(value)]="issueType"
       (input)="search($event)" 
@@ -46,7 +46,7 @@
       <option value="bug">Bug</option>
     </select>
   </div>
-  <div class="col-lg-2">
+  <div class="col-lg-2 max-width-150">
     <select 
       [(value)]="label"
       (input)="search($event)"
@@ -57,10 +57,26 @@
     </select>
   </div>
   <div class="col-lg-1">
-    <button class="btn btn-outline-warning" (click)="resetFilters()">Reset</button>
+    <button 
+      class="btn btn-outline-warning" 
+      (click)="resetFilters()"
+      *ngIf="viewResetFilter()">Reset</button>
   </div>
-  <div class="col-lg-3" *ngIf="currentUserRole === 'manager'">
-    <button class="btn btn-outline-primary" (click)="openModal(inviteModal)"><fa-icon [icon]="['fas', 'users']" class="icon"></fa-icon> Invite</button>
+</div>
+<div class="row" id="invite" *ngIf="currentUserRole === 'manager'">
+  <div class="col-md-12">
+    <button
+      class="btn btn-primary"
+      *ngFor="let user of project.projectUsers"
+      tooltip="{{user.userFullName}}">
+        {{getInitials(user.userFullName)}}
+    </button>
+    <button 
+      class="btn btn-outline-primary" 
+      (click)="openModal(inviteModal)"
+      tooltip="Add people">
+        <fa-icon [icon]="['fas', 'users']" class="icon"></fa-icon>
+    </button>
   </div>
 </div>
 <app-phase-list 
@@ -69,46 +85,6 @@
   [phases]="previewPhases"
   [dragModeEnabled]="dragModeEnabled"
   [currentUserRole]="currentUserRole"></app-phase-list>
-
-<!-- <ng-template #inviteModal>
-  <div class="modal-header">
-    <h5 class="modal-title pull-left">Create a new phase</h5>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal()">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-    <div class="row">
-      <div class="col-md-12">
-        <label for="name">User full name</label>
-        <input [(ngModel)]="userFullNameSelected"
-               [typeahead]="users$"
-               [typeaheadAsync]="true"
-               [typeaheadItemTemplate]="itemTemplate"
-               [isAnimated]="true"
-               (typeaheadOnSelect)="typeaheadOnSelect($event)"
-               typeaheadOptionField="fullName"
-               typeaheadWaitMs="1000"
-               type="text" 
-               placeholder="Please enter user's full name" 
-               class="form-control">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <select [(ngModel)]="selectedUserRole" class="form-control">
-          <option value="user">User</option>
-          <option value="manager">Manager</option>
-        </select>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <button class="btn btn-outline-success btn-block" (click)="inviteUser()" [disabled]="selectedUser === null">Invite</button>
-      </div>
-    </div>
-  </div>
-</ng-template> -->
 
 <div class="modal fade" 
      bsModal 
@@ -161,14 +137,6 @@
 
 <ng-template #itemTemplate let-model="item" let-index="index">
   {{model.fullName}} <i>({{model.userName}})</i>
-</ng-template>
-
-<ng-template #projectDeleteModal>
-  <div class="modal-body text-center">
-    <p>Are you sure you want to delete this project?</p>
-    <button type="button" class="btn btn-outline-danger" (click)="deleteProject()">Yes</button>
-    <button type="button" class="btn btn-default" (click)="closeModal()">No</button>
-  </div>
 </ng-template>
 
 <div class="modal fade" 
