--- a/SpaClient/src/app/projects/phase-list/phase-list.component.css
+++ b/SpaClient/src/app/projects/phase-list/phase-list.component.css
@@ -2,11 +2,6 @@ h1 {
   margin-top: 32px;
 }
 
-.row:nth-of-type(1) {
-  margin-bottom: 18px;
-}
-
-
 #phases {
   margin-top: 24px;
   overflow-x: auto;
@@ -50,6 +45,10 @@ h1 {
   padding: 16px;
   padding-bottom: 0;
   /* font-weight: 400; */
+}
+
+.phase-name .row {
+  margin-bottom: 18px;
 }
 
 .phase-name h5 {
