--- a/SpaClient/src/app/your-work/your-work.component.html
+++ b/SpaClient/src/app/your-work/your-work.component.html
@@ -17,45 +17,59 @@
   <tabset>
     <tab heading="Assigned to me">
       <h6 id="in-progress">IN PROGRESS</h6>
-      <a class="issue" *ngFor="let issueInProgress of inProgress">
-        <div class="issue-logo">
-          <fa-icon *ngIf="issueInProgress.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
-          <fa-icon *ngIf="issueInProgress.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
-        </div>
-        <span class="issue-content">
-          <span class="issue-name">{{issueInProgress.name}}</span>
-          <small class="issue-project">{{issueInProgress.project.name}}</small>
-        </span>
-        <span class="issue-status">In progress</span>
+      <a
+        class="issue" 
+        *ngFor="let issueInProgress of inProgress" 
+        [routerLink]="['/projects', issueInProgress.project.id, 'issues', issueInProgress.id]">
+          <div class="issue-logo">
+            <fa-icon *ngIf="issueInProgress.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
+            <fa-icon *ngIf="issueInProgress.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
+          </div>
+          <span class="issue-content">
+            <span class="issue-name">{{issueInProgress.name}}</span>
+            <small class="issue-project">{{issueInProgress.project.name}}</small>
+          </span>
+          <span class="issue-status">In progress</span>
       </a>
+
       <h6 id="to-do">TO DO</h6>
-      <a class="issue" *ngFor="let issueToDo of toDo">
-        <div class="issue-logo">
-          <fa-icon *ngIf="issueToDo.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
-          <fa-icon *ngIf="issueToDo.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
-        </div>
-        <span class="issue-content">
-          <span class="issue-name">{{issueToDo.name}}</span>
-          <small class="issue-project">{{issueToDo.project.name}}</small>
-        </span>
-        <span class="issue-status">To do</span>
+      <a 
+        class="issue" 
+        *ngFor="let issueToDo of toDo"
+        [routerLink]="['/projects', issueToDo.project.id, 'issues', issueToDo.id]">
+          <div class="issue-logo">
+            <fa-icon *ngIf="issueToDo.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
+            <fa-icon *ngIf="issueToDo.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
+          </div>
+          <span class="issue-content">
+            <span class="issue-name">{{issueToDo.name}}</span>
+            <small class="issue-project">{{issueToDo.project.name}}</small>
+          </span>
+          <span class="issue-status">To do</span>
       </a>
     </tab>
     <tab heading="Starred">
       <h6 id="in-progress">IN PROGRESS</h6>
-      <a class="issue" *ngFor="let issueInProgress of inProgressStarred">
-        <div class="issue-logo">
-          <fa-icon *ngIf="issueInProgress.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
-          <fa-icon *ngIf="issueInProgress.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
-        </div>
-        <span class="issue-content">
-          <span class="issue-name">{{issueInProgress.name}}</span>
-          <small class="issue-project">{{issueInProgress.project.name}}</small>
-        </span>
-        <span class="issue-status">In progress</span>
+      <a 
+        class="issue" 
+        *ngFor="let issueInProgress of inProgressStarred"
+        [routerLink]="['/projects', issueInProgress.project.id, 'issues', issueInProgress.id]">
+          <div class="issue-logo">
+            <fa-icon *ngIf="issueInProgress.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
+            <fa-icon *ngIf="issueInProgress.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
+          </div>
+          <span class="issue-content">
+            <span class="issue-name">{{issueInProgress.name}}</span>
+            <small class="issue-project">{{issueInProgress.project.name}}</small>
+          </span>
+          <span class="issue-status">In progress</span>
       </a>
+
       <h6 id="to-do">TO DO</h6>
-      <a class="issue" *ngFor="let issueToDo of toDoStarred">
+      <a 
+        class="issue" 
+        *ngFor="let issueToDo of toDoStarred"
+        [routerLink]="['/projects', issueToDo.project.id, 'issues', issueToDo.id]">
         <div class="issue-logo">
           <fa-icon *ngIf="issueToDo.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
           <fa-icon *ngIf="issueToDo.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
