--- a/SpaClient/src/app/projects/issues/issue-detail/issue-detail.component.css
+++ b/SpaClient/src/app/projects/issues/issue-detail/issue-detail.component.css
@@ -4,3 +4,52 @@
   margin-bottom: 1rem;
   padding-left: 0;
 }
+
+h6.issue-type {
+  font-weight: 400;
+  margin-bottom: 18px;
+}
+
+.task {
+  color: #4bade8;
+}
+
+.bug {
+  color: #e5493a;
+}
+
+h3 {
+  margin-bottom: 16px;
+}
+
+.col-md-2 .btn-group {
+  /* background-color: rgb(244, 245, 247); */
+  border-radius: 4px;
+  float: right;
+}
+
+#issue-options-button:hover {
+  background-color: lightgray;
+}
+
+.dropdown-item {
+  cursor: pointer;
+}
+
+.col-md-8 .issue-controls {
+  margin-bottom: 46px;
+}
+
+.col-md-8 .btn-default {
+  background-color: rgb(244, 245, 247);
+  margin-right: 6px;
+  
+}
+
+.col-md-8 .btn-default:hover {
+  background-color: lightgray;
+}
+
+h6.description-title {
+  /* font-weight: 400; */
+}
