Continued working on Issue Details component (started working on add assignee modal)

--- a/SpaClient/src/app/projects/issues/issue-detail/issue-detail.component.css
+++ b/SpaClient/src/app/projects/issues/issue-detail/issue-detail.component.css
@@ -40,16 +40,90 @@ h3 {
   margin-bottom: 46px;
 }
 
-.col-md-8 .btn-default {
+.btn-default {
   background-color: rgb(244, 245, 247);
   margin-right: 6px;
   
 }
 
-.col-md-8 .btn-default:hover {
+.btn-default:hover {
   background-color: lightgray;
 }
 
-h6.description-title {
-  /* font-weight: 400; */
+#assignees p {
+  margin-bottom: 0.5rem;
+}
+
+#assignees .assignee span, #created-by span {
+  line-height: 32px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.initials {
+  background-color: orange;
+  border-radius: 50%;
+  line-height: 32px;
+  width: 32px;
+  margin-right: 6px;
+  font-weight: 600;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.comma {
+  margin-right: 8px;
+}
+
+.lowest {
+  color: green;
+}
+
+.low {
+  color: limegreen; 
+}
+
+.medium {
+  color: orange;
+}
+
+.high {
+  color: red;
+}
+
+.highest {
+  color: darkred;
+}
+
+#assignees a {
+  color: #007bff;
+  margin-bottom: 1rem;
+  display: inline-block;
+}
+
+#assignees a:hover {
+  color: #007bff;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.modal-body {
+  padding: 0px;
+}
+
+.modal-body h6 {
+  margin-bottom: 1rem;
+}
+
+.modal-body table {
+  margin-bottom: 0;
+}
+
+.table td, .table th {
+  padding: 0.5rem;
+  vertical-align: middle;
+}
+
+td .btn {
+  padding: 6px 10px;
 }
