--- a/SpaClient/src/app/projects/phase-list/phase-list.component.html
+++ b/SpaClient/src/app/projects/phase-list/phase-list.component.html
@@ -27,6 +27,16 @@
                   </a>
                 </li>
                 <li role="menuitem">
+                  <a 
+                    class="dropdown-item" 
+                    (click)="showModal(phaseEditModal, {
+                      phase: phase,
+                      phaseEdit: true
+                    })">
+                      Edit phase
+                  </a>
+                </li>
+                <li role="menuitem">
                   <a class="dropdown-item" 
                      (click)="showModal(deleteModal, {
                        deleteType: 'phase',
@@ -119,6 +129,32 @@
             <input type="text" placeholder="Phase name..." class="form-control" formControlName="name">
           </div>
           <button class="btn btn-outline-success btn-block" [disabled]="!phaseCreateForm.valid">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>   
+</div>
+
+<!-- Edit phase modal -->
+<div class="modal fade" 
+     bsModal 
+     #phaseEditModal="bs-modal" 
+     (onHidden)="resetForm(phaseCreateForm)">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title pull-left">Edit phase</h5>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="hideModal(phaseEditModal)">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="phaseEditForm" (ngSubmit)="onPhaseEditSubmit(phaseEditModal)">
+          <div class="form-group">
+            <label for="">Phase name</label>
+            <input type="text" placeholder="Phase name..." class="form-control" formControlName="name">
+          </div>
+          <button class="btn btn-outline-success btn-block" [disabled]="!phaseEditForm.valid">Save Changes</button>
         </form>
       </div>
     </div>
