--- a/IdentityServer/Views/Auth/Register.cshtml
+++ b/IdentityServer/Views/Auth/Register.cshtml
@@ -1,27 +1,27 @@
 ﻿@model IdentityServer.Helpers.RegisterViewModel
 
-    <form asp-controller="Auth" asp-action="Register" method="post">
-        <input type="hidden" asp-for="ReturnUrl" />
-        <div>
-            <label>Username</label>
-            <input asp-for="Username" />
-        </div>
-        <div>
-            <label>Full Name</label>
-            <input asp-for="FullName" />
-        </div>
-        <div>
-            <label>Password</label>
-            <input asp-for="Password" />
-        </div>
-        <div>
-            <label>Confirm Password</label>
-            <input asp-for="ConfirmPassword" />
-        </div>
-        <div>
-            <button type="submit">Sign Up</button>
-        </div>
-    </form>
+@*<form asp-controller="Auth" asp-action="Register" method="post">
+    <input type="hidden" asp-for="ReturnUrl" />
+    <div>
+        <label>Username</label>
+        <input asp-for="Username" />
+    </div>
+    <div>
+        <label>Full Name</label>
+        <input asp-for="FullName" />
+    </div>
+    <div>
+        <label>Password</label>
+        <input asp-for="Password" />
+    </div>
+    <div>
+        <label>Confirm Password</label>
+        <input asp-for="ConfirmPassword" />
+    </div>
+    <div>
+        <button type="submit">Sign Up</button>
+    </div>
+</form>
 
 <div>
     <a asp-controller="Auth"
@@ -29,4 +29,43 @@
        asp-route-returnUrl="@Model.ReturnUrl">
         Sign In
     </a>
+</div>*@
+
+<div class="form-container">
+    <form asp-controller="Auth" asp-action="Register" method="post">
+        <div class="form-row">
+            <h3>Sign Up</h3>
+        </div>
+        <input type="hidden" asp-for="ReturnUrl" />
+        <div class="form-row">
+            <label>Username</label>
+            <input asp-for="Username" class="form-control" />
+        </div>
+        <div class="form-row">
+            <label>Full Name</label>
+            <input asp-for="FullName" class="form-control" />
+        </div>
+        <div class="form-row">
+            <label>Password</label>
+            <input asp-for="Password" type="password" class="form-control" />
+        </div>
+        <div class="form-row">
+            <label>Confirm Password</label>
+            <input asp-for="ConfirmPassword" type="password" class="form-control" />
+        </div>
+        <div class="form-row">
+            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+        </div>
+        <div class="form-row">
+            <p>
+                <span>Already have an account?</span>
+                <a asp-controller="Auth"
+                   asp-action="Login"
+                   asp-route-returnUrl="@Model.ReturnUrl">
+                    Sign in
+                </a>
+            </p>
+        </div>
+    </form>
 </div>
+
