--- a/SpaClient/src/app/projects/project-detail/project-detail.component.css
+++ b/SpaClient/src/app/projects/project-detail/project-detail.component.css
@@ -9,7 +9,7 @@ h3 {
   margin-bottom: 24px;
 }
 
-.col-md-2 div {
+.col-md-2 .project-options {
   float: right;
 }
 
@@ -47,24 +47,87 @@ h3 {
   margin-bottom: 16px;
 }
 
-#filter .col-lg-3, #filter .col-lg-2, #filter .col-lg-1 {
+#filter .col-md-3, #filter .col-md-2, #filter .col-md-1 {
   padding-left: 5px;
   padding-right: 5px;
+  padding-top: 4px;
 }
 
 .max-width-150 {
   max-width: 150px;
 }
 
-#invite .col-md-12 {
+#invite {
   padding-left: 5px;
   padding-right: 5px;
 }
 
 #invite button {
+  height: 44px;
+}
+
+#invite button.btn-default, #invite button.btn-primary {
   padding: 0;
+  position: relative;
   border-radius: 50%;
-  width: 42px;
-  height: 42px;
+  width: 44px;
   text-align: center;
+  margin-right: -10px;
+}
+
+#invite .btn-primary {
+  z-index: 999;
+  border: 3px solid white;
+}
+
+.btn-default {
+  background-color: rgb(244, 245, 247);
+  border: 3px solid white;
+}
+
+.btn-default:hover {
+  background-color: lightgray;
+}
+
+#invite #invite-btn.btn.btn-default {
+  z-index: 0;
+}
+
+#invite button:hover, #invite #invite-btn.btn.btn-default:hover {
+  z-index: 1000;
+}
+
+#invite button.margin-right-10 {
+  margin-right: 10px;
+}
+
+.z-10 {
+  z-index: 10;
+}
+.z-9 {
+  z-index: 9;
+}
+.z-8 {
+  z-index: 8;
+}
+.z-7 {
+  z-index: 7;
+}
+.z-6 {
+  z-index: 6;
+}
+.z-5 {
+  z-index: 5;
+}
+.z-4 {
+  z-index: 4;
+}
+.z-3 {
+  z-index: 3;
+}
+.z-2 {
+  z-index: 2;
+}
+.z-1 {
+  z-index: 1;
 }
