Started working on Account settings; implemented password change

--- a/IdentityServer/Views/Auth/Register.cshtml
+++ b/IdentityServer/Views/Auth/Register.cshtml
@@ -39,19 +39,19 @@
         <input type="hidden" asp-for="ReturnUrl" />
         <div class="form-row">
             <label>Username</label>
-            <input asp-for="Username" class="form-control" />
+            <input asp-for="Username" class="form-control" placeholder="Username" />
         </div>
         <div class="form-row">
-            <label>Full Name</label>
-            <input asp-for="FullName" class="form-control" />
+            <label>Full name</label>
+            <input asp-for="FullName" class="form-control" placeholder="Full name" />
         </div>
         <div class="form-row">
             <label>Password</label>
-            <input asp-for="Password" type="password" class="form-control" />
+            <input asp-for="Password" type="password" class="form-control" placeholder="Password" />
         </div>
         <div class="form-row">
-            <label>Confirm Password</label>
-            <input asp-for="ConfirmPassword" type="password" class="form-control" />
+            <label>Confirm password</label>
+            <input asp-for="ConfirmPassword" type="password" class="form-control" placeholder="Confirm password" />
         </div>
         <div class="form-row">
             <button type="submit" class="btn btn-primary btn-block">Sign In</button>
