--- a/SpaClient/src/app/nav/nav.component.html
+++ b/SpaClient/src/app/nav/nav.component.html
@@ -34,7 +34,7 @@
           {{fullName}}
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown" *dropdownMenu>
-          <a class="dropdown-item" href="#">Account Settings</a>
+          <a class="dropdown-item" [routerLink]="['/account']">Account Settings</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" (click)="logout()">Logout</a>
         </div>
