--- a/IdentityServer/Views/Auth/Login.cshtml
+++ b/IdentityServer/Views/Auth/Login.cshtml
@@ -8,11 +8,11 @@
             <input type="hidden" asp-for="ReturnUrl" />
             <div class="form-row">
                 <label>Username</label>
-                <input asp-for="Username" class="form-control" placeholder="Username" />
+                <input asp-for="Username" class="form-control" />
             </div>
             <div class="form-row">
                 <label>Password</label>
-                <input asp-for="Password" type="password" class="form-control" placeholder="Password" />
+                <input asp-for="Password" type="password" class="form-control" />
             </div>
             <div class="form-row">
                 <button type="submit" class="btn btn-success btn-block">Sign In</button>
