--- a/SpaClient/src/app/account/account.component.html
+++ b/SpaClient/src/app/account/account.component.html
@@ -1,7 +1,7 @@
 <!-- <div class="container">
 </div> -->
 <h2>Account settings</h2>
-<form>
+<form [formGroup]="userSettingsForm" (ngSubmit)="updateUserSettings()">
   <!-- Username -->
   <div class="row">
     <div class="col-sm-2">
@@ -17,7 +17,7 @@
         <input 
           type="text" 
           class="form-control" 
-          id="username" 
+          formControlName="username" 
           placeholder="Username">
       </div>
     </div>
@@ -38,7 +38,7 @@
         <input 
           type="text" 
           class="form-control" 
-          id="full-name" 
+          formControlName="fullName" 
           placeholder="Full name">
       </div>
     </div>
@@ -60,7 +60,7 @@
           <input 
             type="file" 
             class="custom-file-input" 
-            id="avatar"
+            formControlName="avatar"
             aria-describedby="avatar">
           <label class="custom-file-label" for="avatar">Choose file</label>
         </div>
@@ -70,7 +70,10 @@
 
   <div class="row">
     <div class="col-sm-4 offset-sm-2">
-      <button class="btn btn-block btn-primary">Save settings</button>
+      <button 
+        class="btn btn-block btn-primary"
+        type="submit"
+        [disabled]="!userSettingsForm.valid">Save settings</button>
     </div>
   </div>
 </form>
